pathfinder/compiler/parser/Tests/bad-011.xq
<a>
  (: no comments in element </a> content :)
</a>
